[package]
name = "keyboard_publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh_interface = {git = "https://github.com/PureRustRobot/zenoh_interface.git"}
zenoh_manage_utils = {git = "https://github.com/PureRustRobot/zenoh_manage_utils.git"}

async-std = "1.0"
zenoh = "0.7.0-rc"
serde = "1.0"
serde_json = "1.0"